# upgrade-nft

./: .eslintrc.json  Anchor.toml  deploy.toml  package.json
app/: .env.template  README.md  package.json
app/components/Header/: Header.tsx
app/components/NFTGallery/: CollectionItem.tsx
app/components/NFTSelectInput/: NFTSelectInput.tsx
app/components/WalletManager/: WalletManager.tsx
app/components/WalletProvider/: WalletProvider.tsx
app/hooks/: useMetadataUpgrade.ts  useWalletNFTs.tsx
app/pages/: index.tsx
app/pages/api/: call_program.ts
app/public/fonts/: fonts.css
app/styles/: theme.ts
app/utils/: burn.ts  nfts.ts
app/utils/arweave/: arweave.ts  transactions.ts
programs/upgrade-nft/: Cargo.toml
programs/upgrade-nft/src/: lib.rs
tests/: upgrade-nft.ts
